<resources>
    <string name="app_name">Control</string>

    <string-array name="currency">
        <item>₽</item>
        <item>$</item>
        <item>€</item>
        <item>֏</item>
    </string-array>

    <string-array name="expenses_type">
        <item>Other</item>
        <item>Food delivery</item>
        <item>Health</item>
        <item>Stationery</item>
        <item>Lunch</item>
        <item>Clothing</item>
        <item>Hairdressing</item>
        <item>Food and other goods</item>
        <item>Entertainment</item>
        <item>Communication</item>
        <item>Electronics</item>
        <item>Transport</item>
    </string-array>

    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>


    <string name="there_s_nothing_here_yet">There\'s nothing here yet.</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="date_colon">Date:</string>
    <string name="amount_income_colon">Your income:</string>
    <string name="amount_expense_colon">Your expense:</string>
    <string name="type_income_colon">Income type:</string>
    <string name="type_expense_colon">Expense type:</string>
    <string name="description">Description</string>
    <string name="description_colon">Description:</string>
    <string name="select_the_type_of_expense">Select the type of expense</string>
    <string name="select_the_type_of_income">Select the type of income</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="save">Save</string>
    <string name="no_description">No description has been added</string>
    <string name="fields_not_fill">"Oops! Probably all fields are not filled in or filled in incorrectly"</string>
    <string name="expense_added">The expense has been successfully added!</string>
    <string name="expense_updated">The expense has been successfully updated!</string>
    <string name="income_added">The income has been successfully added!</string>
    <string name="income_updated">The income has been successfully updated!</string>
    <string name="wrong_date">It seems you\'re living in the future! Change the date</string>
    <string name="parallel_date">It seems you\'re living in a parallel universe! Change the date</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_amount">Sort by amount</string>
    <string name="sort_by_rub">Sort by RUB</string>
    <string name="sort_by_usd">Sort by USD</string>
    <string name="sort_by_eur">Sort by EUR</string>
    <string name="sort_by_amd">Sort by AMD</string>
    <string name="delete_all">Delete all</string>
    <string name="allert_yes">Yes</string>
    <string name="allert_no">No</string>
    <string name="delete_question">Delete this entry?</string>
    <string name="are_you_sure_to_delete">Are you sure you want to delete it?</string>
    <string name="delete_everything">Delete everything?</string>
    <string name="are_you_sure_to_delete_everything">Are you sure you want to delete everything?</string>
    <string name="successfully_deleted">Successfully deleted!</string>
    <string name="successfully_deleted_everything">Successfully deleted everything!</string>
    <string name="expense_income">Expense/Income</string>
    <string name="settings_text">This application allows you to control your expenses and income, monitor the current euro and dollar exchange rates.\n\nIn the application you can see the dynamics of exchange rates between the current day and the previous day.</string>
    <string name="eur_to_rub">EUR to RUB rate</string>
    <string name="usd_to_rub">USD to RUB rate</string>
    <string name="settings_toolbar">Settings</string>
    <string name="error">Error</string>
    <string name="lock">Unlock/Lock</string>
    <string name="set_up_a_pin_code">Set up a pin code</string>
    <string name="enter_the_pin_code">Enter the pin code</string>
    <string name="clear">Clear</string>
    <string name="wrong_pin">Wrong pin code!</string>
    <string name="set_pin">The pin code has been set!</string>
    <string name="rub">₽</string>
    <string name="usd">$</string>
    <string name="eur">€</string>
    <string name="amd">֏</string>
    <string name="statistics">Statistics</string>
    <string name="difference">Difference:</string>
    <string name="all_incomes">All incomes:</string>
    <string name="all_expenses">All expenses:</string>
    <string name="hh">HH</string>
    <string name="time_colon">:</string>
    <string name="ss">ss</string>
    <string name="mm">mm</string>
    <string name="time">Time:</string>
    <string name="delete">Delete</string>



</resources>