<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort_by_date"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by_date"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_amount"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by_amount"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_rub"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by_rub"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_usd"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by_usd"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_eur"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by_eur"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_amd"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by_amd"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_unlock"
        android:icon="@drawable/ic_unlock"
        android:title="@string/lock"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_all"
        android:icon="@drawable/ic_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="ifRoom" />
</menu>