<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.UpdateFragment">

    <EditText
        android:id="@+id/update_amount_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/amount"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_add_toolbar" />

    <Spinner
        android:id="@+id/update_currency_spinner"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:entries="@array/currency"
        android:spinnerMode="dialog"
        android:theme="@style/SpinnerTheme"
        app:layout_constraintBottom_toBottomOf="@+id/update_amount_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/update_amount_et"
        app:layout_constraintTop_toTopOf="@+id/update_amount_et"
        app:layout_constraintVertical_bias="0.029" />

    <EditText
        android:id="@+id/update_year_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="4"
        android:hint="@string/year"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_amount_et" />

    <EditText
        android:id="@+id/update_month_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/month"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/update_year_et"
        app:layout_constraintStart_toEndOf="@+id/update_year_et"
        app:layout_constraintTop_toTopOf="@+id/update_year_et" />

    <EditText
        android:id="@+id/update_day_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/day"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/update_year_et"
        app:layout_constraintStart_toEndOf="@+id/update_month_et"
        app:layout_constraintTop_toTopOf="@+id/update_year_et" />

    <Spinner
        android:id="@+id/update_type_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/expenses_type"
        android:spinnerMode="dialog"
        android:layout_marginTop="8dp"
        android:theme="@style/SpinnerTheme"
        app:layout_constraintEnd_toEndOf="@+id/update_type_tv"
        app:layout_constraintStart_toStartOf="@+id/update_type_tv"
        app:layout_constraintTop_toBottomOf="@+id/update_type_tv" />

    <TextView
        android:id="@+id/update_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/select_the_type_of_expenses"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_operation_tv" />

    <EditText
        android:id="@+id/update_description_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/description_background_color"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textCapSentences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_type_spinner" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/update_add_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="@style/PopupMenuTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/update_set_data_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:clickable="true"
        app:fabCustomSize="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/update_year_et"
        app:layout_constraintStart_toEndOf="@+id/update_day_et"
        app:layout_constraintTop_toTopOf="@+id/update_year_et"
        app:srcCompat="@drawable/ic_calendar_today" />

    <TextView
        android:id="@+id/update_operation_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/expense_income"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_year_et" />

    <Switch
        android:id="@+id/update_exp_inc_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:thumb="@drawable/custom_switch"
        app:layout_constraintBottom_toBottomOf="@+id/update_operation_tv"
        app:layout_constraintStart_toEndOf="@+id/update_operation_tv"
        app:layout_constraintTop_toTopOf="@+id/update_operation_tv"
        app:layout_constraintVertical_bias="1.0"
        app:useMaterialThemeColors="false"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>